--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.0",
-    "react-navigation-stack": "^2.0.16"
+    "react-navigation-stack": "^2.0.16",
+    "react-native-maps": "0.26.1",
+    "expo-location": "~8.0.0",
+    "react-native-webview": "7.4.3",
+    "lottie-react-native": "~2.6.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
